# NotificationGateway

./: conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
analytics_service/: .gitignore  Dockerfile  consumer.py  docker-compose.yml  pyproject.toml  rabbitmq.py
analytics_service/apps/analytics/: admin.py  models.py  pagination.py  serializers.py  urls.py  views.py
analytics_service/apps/analytics/migrations/: 0001_initial.py
analytics_service/conf/: settings.py  urls.py
apps/notifications/: models.py  serializers.py  tasks.py  telegram.py  views.py
apps/notifications/migrations/: 0002_alter_notification_status.py
apps/notifications/tests/: test_api.py  test_celery.py
conf/: settings.py
notification_service/: Dockerfile  consumer.py  pyproject.toml  requirements.txt
notification_service/apps/notifications/: admin.py  serializers.py  telegram.py  urls.py
notification_service/apps/notifications/migrations/: 0001_initial.py
notification_service/apps/notifications/tests/: test_telegram.py
notification_service/conf/: celery.py  settings.py  urls.py
order_service/: publisher.py  pyproject.toml  requirements.txt
order_service/conf/: settings.py
warehouse_service/: .env  Dockerfile  consumer.py  docker-compose.yml  publisher.py  pyproject.toml  rabbitmq.py  requirements.txt
warehouse_service/apps/warehouse/: admin.py  models.py  serializers.py  urls.py  views.py
warehouse_service/apps/warehouse/migrations/: 0001_initial.py  0002_product_slug.py
warehouse_service/conf/: settings.py  urls.py
