[project]
name = "notificationgateway"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "python-decouple>=3.8",
    "redis>=8.0.1",
    "requests>=2.34.2",
]
